welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:4: error: reassignment to val
	nbPas = nbPas + 1 ;
              ^