welcome.lessons.welcome.loopfor.LoopFor.scala.code
for (nbPas<-0 to 5){
	avance();
	nbPas = nbPas + 1 ;
}
